Partial fix of DB tests.